wso2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wso2-service
  namespace : default
spec:
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: wso2
  ports:
    # ports that this service should serve on
    - name: pass-through-http
      protocol: TCP
      port: 8280
    - name: pass-through-https
      protocol: TCP
      port: 8243
    - name: binary
      protocol: TCP
      port: 9611
    - name: binary-secure
      protocol: TCP
      port: 9711
    - name: jms-tcp
      protocol: TCP
      port: 5672
    - name: servlet-https
      protocol: TCP
      port: 9443
    - name: websub-http
      protocol: TCP
      port: 9021
    - name: websub-https
      protocol: TCP
      port: 8021
