wso2-apim-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wso2-apim-ingress
  namespace : default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"    
spec:
  #ingressClassName: nginx    
  tls:
    - hosts:
        - wso2.apim.localtest.me
  rules:
    - host: wso2.apim.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wso2-service
                port:
                  number: 9443
